# rpi-pico-dev-libs

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  rpi-pico-dev-libs.code-workspace
drivers/: CMakeLists.txt
drivers/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h  mpu6050_i2c.c  mpu6050_i2c.h
examples/: CMakeLists.txt
examples/pico_accel/: CMakeLists.txt  pico_accel_i2c.c
